--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/styles/style.css">
@@ -13,19 +14,219 @@
 
 <body>
   <header> <!--nav y logo   Dario Camacho-->
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <img src="./assets/images/navbar/Burger-King-Logo-CMS.png" alt="" class="logo">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Pedí tu combo favorito</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Menu</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Cupones</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Restaurantes</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Novedades</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Delivery</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
   </header>
   <main>
     <article class="bk-carousel"> <!--Carrousel de productos  Dario Rosiansky-->
+      <div id="carouselExampleIndicators" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+            aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+            aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+            aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+            aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+            aria-label="Slide 5"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6"
+            aria-label="Slide 6"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7"
+            aria-label="Slide 7"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8"
+            aria-label="Slide 8"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9"
+            aria-label="Slide 9"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./assets/images/slide/slide1.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/images/slide/slide2.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/images/slide/slide3.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/images/slide/slide4.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/images/slide/slide5.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/images/slide/slide6.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/images/slide/slide7.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/images/slide/slide8.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/images/slide/slide9.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      </div>
     </article>
     <article class="bk-locales"><!--Tarjeta locales-->
     </article>
     <article class="bk-novedades"><!--Tarjeta novedades (3 tarjetas)-->
+      <h2>Novedades</h2>
+      <div class="card-group">
+        <div class="card">
+          <img src="assets/images/novedades/BK_NOVEDADES_WEB_RUSHER-KING-LEGALES_040123.jpg" class="card-img-top"
+            alt="fondo de pantalla bk">
+          <div class="card-body">
+            <h5 class="card-title">Bases y condiciones campera rusher king y bk</h5>
+            <p class="card-text">Bases y condiciones - fondo de pantalla</p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="assets/images/novedades/novedeades-muzzasticks.png" class="card-img-top" alt="muzarella sticks">
+          <div class="card-body">
+            <h5 class="card-title">Muzza sticks mi reyy</h5>
+            <p class="card-text">Nuevo acompañamiento alert! son una bomba y podes pedirlos x4, x6 y x12 según tu manija
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="assets/images/novedades/Web-Nvedades-2400x1600-01.jpg" class="card-img-top" alt="provo king">
+          <div class="card-body">
+            <h5 class="card-title">Nueva provo king</h5>
+            <p class="card-text">Probala en version 100% carne a la parri, pollo crispy o vegetal</p>
+          </div>
+        </div>
+      </div>
     </article>
-    <article class="bk-delivery"><!--Tarjeta delivery(bk delivery + imagen app)-->
+    <article class="bk-delivery"><!--Tarjeta delivery(bk delivery + imagen app) Facundo Balderrama-->
+      <div id="delivery">
+        <div class="container text-center">
+          <div class="row">
+            <div class="card" style="width: 20rem;">
+              <div class="card-body ">
+                <h5 class="card-title">BK Delivery</h5>
+                <p class="card-text">Como vos querés, donde vos querés</p>
+                <a href="#" class="btn btn-light" id="rappibut"></a>
+                <a href="#" class="btn btn-light" id="pediyabut"></a>
+                <a href="#" class="btn btn-danger btn-lg" id="pedido">Hacé tu pedido</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="container text-center">
+          <div class="row">
+            <div id="bigimg" class="col">
+              <img id="appimg" width="100%" height="auto"
+                src="https://s3-eu-central-1.amazonaws.com/www.burgerking.com.ar.v2/wp-media-folder-burger-king-argentina//home/ubuntu/wordpress/web/app/uploads/sites/5/landing_page_image-croped-5-1-1.png"
+                alt="App de pedidos">
+            </div>
+            <div id="descarga" class="col">
+              <div id="descrip">
+                <h1 class="white-text">Descargá la APP y disfrutá mucho más por mucho menos</h1>
+                <a href="#" class="btn btn-dark" id="gplay"></a>
+                <a href="#" class="btn btn-dark" id="appstore"></a>
+                <p class="white-text">Apple y el logotipo de Apple son marcas comerciales de Apple Inc, registradas en
+                  EE.UU. y otros países. App Store es una marca de servicio de Apple Inc. Google Play
+                  es una marca comercial de Google Inc. Se aplican términos.
+                </p>
+              </div>
+
+            </div>
+          </div>
+
+        </div>
+      </div>
     </article>
   </main>
   <aside></aside>
-  <footer><!--Footer Dario Camacho-->
+  <footer id="footer" class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top b">
+    <div class="col mb-3">
+      <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
+        <svg class="bi me-2" width="40" height="32">
+          <use xlink:href="#bootstrap"></use>
+        </svg>
+      </a>
+      <p class="text-muted white">Burger King© 2022</p>
+    </div>
+
+    <div class="col mb-3">
+
+    </div>
+
+    <div class="col mb-3">
+      <h5>Info Bk</h5>
+      <ul class="nav flex-column">
+        <li class="nav-item mb-2" ><a  href="#" class="nav-link p-0 text-muted white">Menu</a></li>
+        <li class="nav-item mb-2" ><a  href="#" class="nav-link p-0 text-muted white">Restaurantes</a></li>
+        <li class="nav-item mb-2" ><a  href="#" class="nav-link p-0 text-muted white">Cupones</a></li>
+        <li class="nav-item mb-2" ><a  href="#" class="nav-link p-0 text-muted white">Minutos Bk</a></li>
+      </ul>
+    </div>
+
+    <div class="col mb-3">
+      <h5>Información</h5>
+      <ul id="white" class="nav flex-column">
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted white">Sitemap</a></li>
+      </ul>
+    </div>
+
+    <div class="col mb-3">
+      <h5>My Bk</h5>
+      <ul id="white" class="nav flex-column">
+        <li class="nav-item mb-2"><a  href="#" class="nav-link p-0 text-muted white">Contáctanos</a></li>
+        <li class="nav-item mb-2"><a  href="#" class="nav-link p-0 text-muted white">Empleo</a></li>
+        <li class="nav-item mb-2"><a  href="#" class="nav-link p-0 text-muted white">Delivery</a></li>
+        <li class="nav-item mb-2"><a  href="#" class="nav-link p-0 text-muted white">Politica de privacidad</a></li>
+        <li class="nav-item mb-2"><a  href="#" class="nav-link p-0 text-muted white">Defensa de las y los consumidores</a></li>
+      </ul>
+    </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
