--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
   <header> <!--nav y logo   Dario Camacho-->
+    <div class="nav-container">
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <img src="./assets/images/navbar/Burger-King-Logo-CMS.png" alt="" class="logo">
@@ -46,9 +47,10 @@
         </div>
       </div>
     </nav>
+  </div>
   </header>
   <main>
-    <article class="bk-carousel"> <!--Carrousel de productos  Dario Rosiansky-->
+    <article class="bk-carousel "> <!--Carrousel de productos  Dario Rosiansky-->
       <div id="carouselExampleIndicators" class="carousel slide">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -74,28 +76,28 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./assets/images/slide/slide1.png" class="d-block w-100" alt="...">
+            <img src="./assets/images/slide/slide1.jpg" class="d-block w-100 carousel-img" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./assets/images/slide/slide2.png" class="d-block w-100" alt="...">
+            <img src="./assets/images/slide/slide2.png" class="d-block w-100 carousel-img" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./assets/images/slide/slide3.png" class="d-block w-100" alt="...">
+            <img src="./assets/images/slide/slide3.jpg" class="d-block w-100 carousel-img" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./assets/images/slide/slide4.png" class="d-block w-100" alt="...">
+            <img src="./assets/images/slide/slide4.jpg" class="d-block w-100 carousel-img" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./assets/images/slide/slide5.png" class="d-block w-100" alt="...">
+            <img src="./assets/images/slide/slide5.jpg" class="d-block w-100 carousel-img" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./assets/images/slide/slide6.png" class="d-block w-100" alt="...">
+            <img src="./assets/images/slide/slide6.jpg" class="d-block w-100 carousel-img" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./assets/images/slide/slide7.png" class="d-block w-100" alt="...">
+            <img src="./assets/images/slide/slide7.jpg" class="d-block w-100 carousel-img" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./assets/images/slide/slide8.png" class="d-block w-100" alt="...">
+            <img src="./assets/images/slide/slide8.jpg" class="d-block w-100 carousel-img" alt="...">
           </div>
           <div class="carousel-item">
             <img src="./assets/images/slide/slide9.jpg" class="d-block w-100" alt="...">
@@ -112,34 +114,41 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      </div>
+
     </article>
     <article class="bk-locales"><!--Tarjeta locales-->
     </article>
     <article class="bk-novedades"><!--Tarjeta novedades (3 tarjetas)-->
       <h2>Novedades</h2>
-      <div class="card-group">
-        <div class="card">
-          <img src="assets/images/novedades/BK_NOVEDADES_WEB_RUSHER-KING-LEGALES_040123.jpg" class="card-img-top"
-            alt="fondo de pantalla bk">
-          <div class="card-body">
-            <h5 class="card-title">Bases y condiciones campera rusher king y bk</h5>
-            <p class="card-text">Bases y condiciones - fondo de pantalla</p>
+      <div class="card-group row justify-content-around">
+        <div class="col-sm-8 col-md-5 col-lg-3" id="primera">
+          <div class="card tarjeta"><!--card de bootstrap / tarjeta personalizada-->
+            <img src="assets/images/novedades/BK_NOVEDADES_WEB_RUSHER-KING-LEGALES_040123.jpg" class="card-img-top"
+              alt="fondo de pantalla bk">
+            <div class="card-body">
+              <h5 class="card-title">Bases y condiciones campera rusher king y bk</h5>
+              <p class="card-text">Bases y condiciones - fondo de pantalla</p>
+            </div>
           </div>
         </div>
-        <div class="card">
-          <img src="assets/images/novedades/novedeades-muzzasticks.png" class="card-img-top" alt="muzarella sticks">
-          <div class="card-body">
-            <h5 class="card-title">Muzza sticks mi reyy</h5>
-            <p class="card-text">Nuevo acompañamiento alert! son una bomba y podes pedirlos x4, x6 y x12 según tu manija
-            </p>
+        <div class="col-md-5 col-lg-3" id="segunda">
+          <div class="card tarjeta">
+            <img src="assets/images/novedades/novedeades-muzzasticks.png" class="card-img-top" alt="muzarella sticks">
+            <div class="card-body">
+              <h5 class="card-title">Muzza sticks mi reyy</h5>
+              <p class="card-text">Nuevo acompañamiento alert! son una bomba y podes pedirlos x4, x6 y x12 según tu
+                manija
+              </p>
+            </div>
           </div>
         </div>
-        <div class="card">
-          <img src="assets/images/novedades/Web-Nvedades-2400x1600-01.jpg" class="card-img-top" alt="provo king">
-          <div class="card-body">
-            <h5 class="card-title">Nueva provo king</h5>
-            <p class="card-text">Probala en version 100% carne a la parri, pollo crispy o vegetal</p>
+        <div class="col-lg-3" id="tercera">
+          <div class="card tarjeta">
+            <img src="assets/images/novedades/Web-Nvedades-2400x1600-01.jpg" class="card-img-top" alt="provo king">
+            <div class="card-body">
+              <h5 class="card-title">Nueva provo king</h5>
+              <p class="card-text">Probala en version 100% carne a la parri, pollo crispy o vegetal</p>
+            </div>
           </div>
         </div>
       </div>
@@ -163,7 +172,7 @@
         <div class="container text-center">
           <div class="row">
             <div id="bigimg" class="col">
-              <img id="appimg" width="100%" height="auto"
+              <img id="appimg" width="100%"
                 src="https://s3-eu-central-1.amazonaws.com/www.burgerking.com.ar.v2/wp-media-folder-burger-king-argentina//home/ubuntu/wordpress/web/app/uploads/sites/5/landing_page_image-croped-5-1-1.png"
                 alt="App de pedidos">
             </div>
@@ -203,28 +212,29 @@
     <div class="col mb-3">
       <h5>Info Bk</h5>
       <ul class="nav flex-column">
-        <li class="nav-item mb-2" ><a  href="#" class="nav-link p-0 text-muted white">Menu</a></li>
-        <li class="nav-item mb-2" ><a  href="#" class="nav-link p-0 text-muted white">Restaurantes</a></li>
-        <li class="nav-item mb-2" ><a  href="#" class="nav-link p-0 text-muted white">Cupones</a></li>
-        <li class="nav-item mb-2" ><a  href="#" class="nav-link p-0 text-muted white">Minutos Bk</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted white">Menu</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted white">Restaurantes</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted white">Cupones</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted white">Minutos Bk</a></li>
       </ul>
     </div>
 
     <div class="col mb-3">
       <h5>Información</h5>
-      <ul id="white" class="nav flex-column">
+      <ul class="nav flex-column">
         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted white">Sitemap</a></li>
       </ul>
     </div>
 
     <div class="col mb-3">
       <h5>My Bk</h5>
-      <ul id="white" class="nav flex-column">
-        <li class="nav-item mb-2"><a  href="#" class="nav-link p-0 text-muted white">Contáctanos</a></li>
-        <li class="nav-item mb-2"><a  href="#" class="nav-link p-0 text-muted white">Empleo</a></li>
-        <li class="nav-item mb-2"><a  href="#" class="nav-link p-0 text-muted white">Delivery</a></li>
-        <li class="nav-item mb-2"><a  href="#" class="nav-link p-0 text-muted white">Politica de privacidad</a></li>
-        <li class="nav-item mb-2"><a  href="#" class="nav-link p-0 text-muted white">Defensa de las y los consumidores</a></li>
+      <ul class="nav flex-column">
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted white">Contáctanos</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted white">Empleo</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted white">Delivery</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted white">Politica de privacidad</a></li>
+        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted white">Defensa de las y los
+            consumidores</a></li>
       </ul>
     </div>
   </footer>
